styling Header of Page Teachers

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,5 +1,4 @@
 :root {
-  font-size: 60%;
   --color-background: #f0f0f7;
   --color-primary-lighter: #9871f5;
   --color-primary-light: #916bea;
@@ -18,12 +17,13 @@
   --color-button-text: #ffffff;
   --color-box-base: #ffffff;
   --color-box-footer: #fafafc;
+
+  font-size: 60%;
 }
 
 * {
   margin: 0;
   padding: 0;
-  border: none;
   box-sizing: border-box;
 }
 
@@ -33,21 +33,22 @@ body,
   height: 100vh;
 }
 
-body,
-input,
-button,
-textarea {
-  font: 500 1.6rem Poppins;
-}
-
 body {
-  background-color: var(--color-background);
+  background: var(--color-background);
 }
 
 #root {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+body,
+input,
+button,
+textarea {
+  font: 500 1.6rem Poppins;
+  color: var(--color-text-base);
 }
 
 .container {
