--- a/src/components/Textarea/styles.css
+++ b/src/components/Textarea/styles.css
@@ -1,18 +1,19 @@
-.input-block {
+.textarea-block {
   position: relative;
 }
 
-.input-block + .input-block {
+.textarea-block + .textarea-block {
   margin-top: 1.4rem;
 }
 
-.input-block label {
+.textarea-block label {
   font-size: 1.4rem;
 }
 
-.input-block input {
+.textarea-block textarea {
   width: 100%;
-  height: 5.6rem;
+  height: 16rem;
+  min-height: 8rem;
   margin-top: 0.8rem;
 
   background-color: var(--color-input-background);
@@ -20,11 +21,12 @@
   border-radius: 0.8rem;
 
   outline: 0;
-  padding: 0 1.6rem;
+  resize: vertical;
+  padding: 1.2rem 1.6rem;
   font: 1.6rem Archivo;
 }
 
-.input-block:focus-within::after {
+.textarea-block:focus-within::after {
   width: cal(100% - 3.2rem);
   height: 2px;
 
@@ -34,5 +36,5 @@
   position: absolute;
   left: 1.6rem;
   right: 1.6rem;
-  bottom: 0;
+  bottom: 7px;
 }
